do changes in website maintaun space between content

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -382,7 +382,7 @@
         <section>
             <div class="about_ussection">
                 <div class="px-[5%] py-6">
-                    <div class="md:flex md:grid grid-cols-2 gap-4 mt-7 pt-5">
+                    <div class="md:grid grid-cols-2 gap-4 mt-7 pt-5">
                         <div class="md:flex-1">
                             <div class="rounded-3xl">
                                 <a href="#" class="block border border-gray-200 rounded-xl bg-[#2c23238f] text-center mb-5 p-5 text-[#1325e8]">
