--- a/blogs/index.html
+++ b/blogs/index.html
@@ -174,7 +174,7 @@
                             </a>
                         </div>
                         <div class="px-4 pb-2">
-                            <a class="text-xl" href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">6 Reasons to Choose Stand Constructions as Your Exhibition Stand Builder in Berlin</a>
+                          <h2><a class="text-xl" href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">6 Reasons to Choose Stand Constructions as Your Exhibition Stand Builder in Berlin</a></h2>
                             <p class="text-sm text-gray-400">June 6, 2024</p>
                             <p class="text-gray-600 my-2">Berlin, the capital of Germany, witnesses multiple exciting exhibitions each year. These exhibitions exhibition stand builder in Berlin attract visitors</p>
                         </div>
@@ -186,7 +186,7 @@
                             </a>
                         </div>
                         <div class="px-4 pb-2">
-                            <a class="text-xl" href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">Exhibition Stand Design Company in Germany</a>
+                          <h2>  <a class="text-xl" href="https://www.standconstructions.com/blogs/exhibition-stand-builder-in-berlin/">Exhibition Stand Design Company in Germany</a></h2>
                             <p class="text-sm text-gray-400">May 20, 2024</p>
                             <p class="text-gray-600 my-2">Welcome to our exhibition stand design company in Germany. As a leading German booth design company, we specialize in creating</p>
                         </div>
