--- a/exhibition-stand-builder/italy/index.html
+++ b/exhibition-stand-builder/italy/index.html
@@ -377,16 +377,16 @@
         <section>
             <div class="wrap-3 ">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5 m:10">
+                    <div class="text-center ">
 
-                        <h2 class="md:text-4xl text-2xl text-gray md:mt-4 md:pb-20 mb:5">LOOKING FOR A RELIABLE EXHIBITION STAND DESIGN COMPANY IN ITALY
+                        <h2 class="md:text-4xl text-2xl  text-gray-600 md:mt-40 pb-10 ">LOOKING FOR A RELIABLE EXHIBITION STAND DESIGN COMPANY IN ITALY
                         </h2>
                     </div>
                     <div class="md:grid md:grid-cols-2 gap-6  md:pl-10">
 
 
                         <div class="content_para ">
-                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-slate-100">Stand Constructions is a leading <b>exhibition stand design company in Italy </b> with end-to-end showcasing offerings, team, and equipment, and it is committed to making sure an extra practical technique to constructing your
+                            <p class=" border border-lightgray-400 rounded-3xl  md:mt-10 text-gray-500 p-10 mb-3 bg-slate-100">Stand Constructions is a leading <b>exhibition stand design company in Italy </b> with end-to-end showcasing offerings, team, and equipment, and it is committed to making sure an extra practical technique to constructing your
                                 brand experience. We design and build exhibition stands that spotlight your brand in the sea of exhibitors on the exhibition floor. A top-notch exhibition stand allows one to tell a person without a doubt and in only three
                                 seconds about the business. Our designed exhibition stands because it portrays the brand image and trustworthiness quickly and effectively. We are a leading exhibition stand contractor company in Italy, which offers complete
                                 exhibition stand-associated offerings, from designing to dealing with logistics throughout the transportation of stands on the exhibition site. With our fascinating designs, in-intensity know-how and expertise, you can
