--- a/exhibition-stand-builder/netherlands/index.html
+++ b/exhibition-stand-builder/netherlands/index.html
@@ -378,9 +378,9 @@
         <section>
             <div class="wrap-3 ">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5 m:10">
+                    <div class="text-center md:p-10 m:10">
 
-                        <h2 class="md:text-4xl text-2xl text-gray md:mt-4 md:pb-20 mb:5">STAND CONSTRUCTIONS: A PROMINENT EXHIBITION STANDS DESIGN COMPANY IN THE NETHERLANDS
+                        <h2 class="md:text-4xl text-2xl text-gray-600  md:pb-8 mb:5 md:mt-20">STAND CONSTRUCTIONS: A PROMINENT EXHIBITION STANDS DESIGN COMPANY IN THE NETHERLANDS
                         </h2>
                     </div>
                     <div class="md:grid md:grid-cols-2 gap-6  md:pl-10">
@@ -415,12 +415,12 @@
 
 
         <section>
-            <div class="px-[5%] my-5">
+            <div class="px-[5%] my-5 bg-gray-100 ">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl  text-gray-600 font-medium  text-center md:mt-20">Some of Our Work That
                             Excelled at the Exhibitions</h2>
-                        <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
+                        <p class="text-center pt-5 pb-8  text-gray-500 ">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
                             style and characteristics. As an <b>exhibition stand contractor</b>, we helped
                             our clients achieve their marketing and advertising objectives through these attractive
@@ -470,14 +470,14 @@
                 <div class="px-[3%]">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10">WHY SHOULD YOU MAKE US YOUR EXHIBITION STAND DESIGN COMPANY IN NETHERLANDS?
+                        <h2 class="md:text-4xl text-2xl text-gray-600 mt-4 md:pb-9">WHY SHOULD YOU MAKE US YOUR EXHIBITION STAND DESIGN COMPANY IN NETHERLANDS?
                         </h2>
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 mt-5">
+                        <div class="text-center md:p-10 ">
 
-                            <p class=" border border-lightgray-400 rounded-3xl  md:p-10 mb-3 p-5 bg-slate-100 ">
+                            <p class=" border border-lightgray-400 rounded-3xl  text-gray-500   md:p-10 mb-3 p-5 bg-slate-100 ">
                                 Partner with Stand Constructions for the Netherlands’ most distinct exhibition stand layout if you need to create a long-lasting impact. Stand Constructions has been a leading <b>exhibition stand contractor company in Netherlands </b>for
                                 over 15 years. As an experienced and skilled <b> exhibition stand manufacturer in Netherlands </b>, we create attractive exhibition stands that maximise engagement whilst keeping an avant-garde appearance. Exhibitions are
                                 a top-notch area for face-to-face interactions with ability customers. Selecting the proper stand design will distinguish the your achievements from the crowd. Making the appropriate desire will rely upon various things,
@@ -507,8 +507,8 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class= "text-gray-600 text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
