--- a/exhibition-stand-builder/spain/index.html
+++ b/exhibition-stand-builder/spain/index.html
@@ -377,16 +377,16 @@
         <section>
             <div class="wrap-3 ">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5 m:10">
+                    <div class="text-center md:p-10">
 
-                        <h2 class="md:text-4xl text-2xl text-gray md:mt-4 md:pb-20 mb:5">STAND CONSTRUCTIONS: A RELIABLE EXHIBITION STAND DESIGN COMPANY IN SPAIN
+                        <h2 class="md:text-4xl text-2xl  text-gray-600 md:mt-20 md:mb-10 mb:10 ">STAND CONSTRUCTIONS: A RELIABLE EXHIBITION STAND DESIGN COMPANY IN SPAIN
                         </h2>
                     </div>
                     <div class="md:grid md:grid-cols-2 gap-6  md:pl-10">
 
 
                         <div class="content_para ">
-                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-slate-100">Stand Constructions is a complete <b>exhibition stand design company in Spain</b>. We layout, construct, supply and manage custom exhibition stands for exhibitions. To layout and construct an exhibition stand, our in-house
+                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3  text-gray-500  bg-slate-100">Stand Constructions is a complete <b>exhibition stand design company in Spain</b>. We layout, construct, supply and manage custom exhibition stands for exhibitions. To layout and construct an exhibition stand, our in-house
                                 3-D innovative designers’ study different industry types to broaden business-orientated exhibition stand designs. Being a leading <b>exhibition stand contractor company in Spain </b>, we offer a complete variety of merchandise
                                 and offerings, including conceptualizing display stand themes, with the display on-site management, dismantling, shipping, and offering after-display support. From idea to crowning glory, you have the most effective, one
                                 significant factor of contact, and that will be a skilled, senior member of our exhibition team. We must take your exhibition stand layout and creation short and offer a set fee citation in your undertaking with an in-depth
@@ -412,12 +412,12 @@
 
 
         <section>
-            <div class="px-[5%] my-5">
+            <div class="px-[5%] my-5 bg-gray-100" >
                 <div class="md:grid grid-cols-6 gap-4">
-                    <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
+                    <div class="col-start-2 col-span-4 ">
+                        <h2 class="md:text-3xl text-2xl text-gray-600 font-medium  text-center md:mt-20">Some of Our Work That
                             Excelled at the Exhibitions</h2>
-                        <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
+                        <p class="text-center pt-5 pb-5  text-gray-500 ">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
                             style and characteristics. As an <b>exhibition stand contractor</b>, we helped
                             our clients achieve their marketing and advertising objectives through these attractive
@@ -468,14 +468,14 @@
                 <div class="px-[3%]">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10">COMPREHENSIVE EXHIBITION STANDS DESIGN COMPANY IN SPAIN, STAND CONSTRUCTION IS HERE!
+                        <h2 class="md:text-4xl text-2xl text-gray-600 mt-4 md:pb-5">COMPREHENSIVE EXHIBITION STANDS DESIGN COMPANY IN SPAIN, STAND CONSTRUCTION IS HERE!
                         </h2>
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
                         <div class="text-center md:p-10 mt-5">
 
-                            <p class=" border border-lightgray-400 rounded-3xl  md:p-10 mb-3 p-5 bg-slate-100 ">
+                            <p class=" border border-lightgray-400 rounded-3xl  text-gray-500   md:p-10 mb-3 p-5 bg-slate-100 ">
                                 We are an <b>exhibition stand design company in Spain </b>that offers on-hand and on-site management with the development and dismantling of your exhibition stand to make sure that each one is going to plan. With Stand
                                 Constructions, you can have a beneficial exhibition stand design with our superior era that removes mishaps at the display ground. We offer end-to-end exhibition answers, wonderful stand designs, and help across the clock.
                                 Our services as an <b>exhibition stand contractor company in Spain </b>include our award-triumphing conventional builds, modular presentations, and shell scheme stands. Our team at Stand Constructions are distinctly certified
@@ -506,8 +506,8 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class=" text-gray-600  text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
