--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="flex flex-col gap-5 items-center text-center mt-16 mb-10">
                     <h1 class="md:text-4xl text-2xl font-bold text-white md:pt-20">Exhibition Stand Builder in Europe
                     </h1>
-                    <p class="md:text-xl text-white">Stand Design, You Know You Want It</p>
+                    <span class="md:text-xl text-white">Stand Design, You Know You Want It</span>
                     <a href="https://www.standconstructions.com/#portfolio"
                         class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">Our
                         Portfolio
@@ -739,9 +739,13 @@
                 <div class="px-[3%]">
                     <div class="text-center pt-5" >
                         <span class="text-white md:text-xl">[ Our Process ]</span>
-                        <h2 class="md:text-4xl text-xl text-white mt-4 pb-20">How do we create excellence on the
+                        <br>
+                        <br>
+                        <span class="md:text-4xl text-xl text-white mt-4 pb-20">How do we create excellence on the
                             exhibition grounds?
-                        </h2>
+                        </span>
+                        <br>
+                        <br>
 
                     </div>
 
@@ -756,8 +760,8 @@
                                     </div>
                                     <h3 class="">Brief</h3>
                                 </div>
-                                <p class="description">We communicate with and collect customer information to provide
-                                    design options based on the feedback.</p>
+                                <span class="description">We communicate with and collect customer information to provide
+                                    design options based on the feedback.</span>
                             </div>
                         </div>
 
@@ -770,8 +774,8 @@
                                     </div>
                                     <h3 class="">Creative options</h3>
                                 </div>
-                                <p class="description">We communicate with and collect customer information to provide
-                                    design options based on the feedback.</p>
+                                <span class="description">We communicate with and collect customer information to provide
+                                    design options based on the feedback.</span>
                             </div>
                         </div>
 
@@ -784,8 +788,8 @@
                                     </div>
                                     <h3 class="">Customer reviews</h3>
                                 </div>
-                                <p class="description">We communicate with and collect customer information to provide
-                                    design options based on the feedback.</p>
+                                <span class="description">We communicate with and collect customer information to provide
+                                    design options based on the feedback.</span>
                             </div>
                         </div>
 
@@ -804,8 +808,8 @@
                                     </div>
                                     <h3 class="">In-production</h3>
                                 </div>
-                                <p class="description">After the final approval of the 3D design, we start production in
-                                    our factory and take full responsibility.</p>
+                                <span class="description">After the final approval of the 3D design, we start production in
+                                    our factory and take full responsibility.</span>
                             </div>
                         </div>
 
@@ -818,8 +822,8 @@
                                     </div>
                                     <h3 class="">Onsite supervision</h3>
                                 </div>
-                                <p class="description">Our project manager will manage each thing to create a unique
-                                    experience onsite.</p>
+                                <span class="description">Our project manager will manage each thing to create a unique
+                                    experience onsite.</span>
                             </div>
                         </div>
 
@@ -832,8 +836,8 @@
                                     </div>
                                     <h3 class="">Installation and storage</h3>
                                 </div>
-                                <p class="description">Our team of experts will look out the stand building at the site,
-                                    install the display, and store it for future use if necessary.</p>
+                                <span class="description">Our team of experts will look out the stand building at the site,
+                                    install the display, and store it for future use if necessary.</span>
                             </div>
                         </div>
 
@@ -844,12 +848,12 @@
                 </div>
         </section>
         <section>
-            <div class="px-[5%] my-5">
+            <div class="px-[5%]  bg-gray-100 ">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center" id="portfolio">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl  font-medium  text-center md:mt-10" id="portfolio ">Some of Our Work That
                             Excelled at the Exhibitions</h2>
-                        <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
+                        <p class="text-center pt-5 pb-5">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
                             style and characteristics. As an <b>exhibition stand contractor</b>, we helped
                             our clients achieve their marketing and advertising objectives through these attractive
@@ -860,7 +864,7 @@
                     </div>
 
                 </div>
-                <div class="grid md:grid-cols-3 gap-3 mb-5 p-10">
+                <div class="grid md:grid-cols-3 gap-3 mb-5 p-10 md:mx-10">
                     <div class="overflow-hidden border border-blue-600 rounded-2xl p-5  hover:bg-sky-700 boxes ">
                         <img src="assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow"
@@ -894,11 +898,11 @@
                 </div>
             </div>
         </section>
-        <section class="bg-[#02D7FF3B] mb-20 ">
+        <section class=" mb-20 ">
             <div class="px-[3%]">
                 <div class="grid md:grid-rows-1">
                     <div>
-                        <h2 class="md:text-4xl text-2xl text-[#0076F9] font-medium mb-5 text-center p-10">Why Choose
+                        <h2 class="md:text-4xl text-2xl text-[#0076F9] font-medium text-center p-10">Why Choose
                             Stand Constructions as an Exhibition Stand Builder?</h2>
                         <div class="border border-gray-300 rounded-xl backdrop-blur-sm p-5 mb-10 bg-slate-50">
                             <p class="text-black-500 ">Stand Constructions is a reliable and respected exhibition stand
@@ -926,7 +930,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact">
+        <section id="contact  bg-white ">
 
             <div class=" relative w-full  p-3 bg-white  flex justify-center">
                 <span class="big-circle"></span>
@@ -1053,10 +1057,10 @@
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                 <div>
-                    <p class="text-sm">
+                    <span class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                         who carry your brand to world standards with years of knowledge and experience.
-                    </p>
+                    </span>
                 </div>
             </div>
             <div class="col-span-2">
@@ -1102,7 +1106,7 @@
                                 <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">info@standconstructions.com</p>
+                                <span class="font-semibold">info@standconstructions.com</span>
                                 <span class="text-sm">Mail us</span>
                             </div>
                         </div>
@@ -1111,7 +1115,7 @@
                                 <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">standconstructions.com</p>
+                                <span class="font-semibold">standconstructions.com</span>
                                 <span class="text-sm">Website</span>
                             </div>
                         </div>
@@ -1120,7 +1124,7 @@
                                 <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                                <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                                 <span class="text-sm">Located at</span>
                             </div>
                         </div>
