--- a/stand-design-and-booth-construction-company/berlin/index.html
+++ b/stand-design-and-booth-construction-company/berlin/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
     <title>Exhibition Stand Designer, Builder &amp; Contractor in Berlin</title>
 	<meta name="description" content="Stand Constructions is a leading exhibition stand design company in Berlin that has been offering a range of showcasing services to exhibitors." />
 	<link rel="canonical" href="https://www.standconstructions.com/stand-design-and-booth-construction-company/berlin/" />
@@ -291,7 +294,7 @@
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 md:mt-5">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-20 pb-10">STAND CONSTRUCTIONS ARE A
+                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 pb-5">STAND CONSTRUCTIONS ARE A
                             FULL-SERVICE EXHIBITION
                             STAND DESIGN COMPANY IN BERLIN
                         </h2>
@@ -347,7 +350,7 @@
                     <div class="md:flex justify-center gap-7 ">
 
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                            class="four col-md-3 counterblur ">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
                                 <i
                                     class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -355,7 +358,8 @@
                                 <span class="counter text-white block text-3xl leading-5">
                                     4650
                                     <sup>+</sup></span>
-                                <p class="text-lg text-white">CLIENTS</p>
+                                    <br>
+                                <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -364,7 +368,8 @@
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
 
                                 <span class="counter  text-white block text-3xl leading-5">14650+</span>
-                                <p class="text-lg text-white">Projects</p>
+                                <br>
+                                <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -377,7 +382,8 @@
                                     6
                                     +
                                 </span>
-                                <p class="text-lg text-white">CONTINENTS</p>
+                                <br>
+                                <span class="text-lg text-white">CONTINENTS</span>
                             </div>
                         </div>
                         <div
@@ -390,7 +396,8 @@
                                     650
 
                                     +</span>
-                                <p class="text-lg text-white">EXHIBITIONS</p>
+                                    <br>
+                                <span class="text-lg text-white">EXHIBITIONS</span>
                             </div>
                         </div>
                     </div>
@@ -401,12 +408,12 @@
 
 
         <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5">
-                <h3 class="md:text-4xl text-2xl font-bold mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
+            <div class="px-[5%] text-center p-5 bg-gray-100 ">
+                <h3 class="md:text-4xl text-2xl  mt-10 ">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
-                <div class="grid md:grid-cols-3 gap-2">
+                <div class="grid md:grid-cols-3 gap-2 md:mx-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
                         <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
@@ -452,7 +459,7 @@
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-5 mt-5">
+                        <div class="text-center md:p-10 py-5">
 
                             <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
                                 Speaking of why you should opt for us as your exhibition stand design company in Berlin,
@@ -689,8 +696,8 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class=" text-gray-600 text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
@@ -808,12 +815,12 @@
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                 <div>
-                    <p class="text-sm">
+                    <span class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
                         equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions,
                         custom and unique stands are created by our talented graphic designers,
                         who carry your brand to world standards with years of knowledge and experience.
-                    </p>
+                    </span>
                 </div>
             </div>
             <div class="col-span-2">
@@ -864,7 +871,7 @@
                                 <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">info@standconstructions.com</p>
+                                <span class="font-semibold">info@standconstructions.com</span>
                                 <span class="text-sm">Mail us</span>
                             </div>
                         </div>
@@ -873,7 +880,7 @@
                                 <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">standconstructions.com</p>
+                                <span class="font-semibold">standconstructions.com</span>
                                 <span class="text-sm">Website</span>
                             </div>
                         </div>
@@ -882,7 +889,7 @@
                                 <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                                <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland<span>
                                 <span class="text-sm">Located at</span>
                             </div>
                         </div>
@@ -894,7 +901,7 @@
 
     <div class="bg-black text-center py-3">
         <p class="text-gray-400">Copyright © 2024 Stand Constructions by <a href="https://digitalfyx.com/"
-                class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</p>
+                class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</span>
     </div>
     <!-- /Footer-->
      <!-- Modal Structure -->
