--- a/stand-design-and-booth-construction-company/cologne/index.html
+++ b/stand-design-and-booth-construction-company/cologne/index.html
@@ -170,8 +170,8 @@
                         <h1 class="text-2xl md:text-6xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES COLOGNE
                         </h1>
-                        <p class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Cologne
-                        </p>
+                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Cologne
+                        </span>
                     </div>
                     <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
                         <a href="#"
@@ -265,9 +265,9 @@
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5">
+                    <div class="text-center md:p-10 md:mt-20">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-20 pb-10">STAND CONSTRUCTIONS ARE A
+                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 ">STAND CONSTRUCTIONS ARE A
                             FULL-SERVICE EXHIBITION STAND DESIGN COMPANY IN COLOGNE
                         </h2>
                     </div>
@@ -332,7 +332,8 @@
                                 <span class="counter text-white block text-3xl leading-5">
                                     4650
                                     <sup>+</sup></span>
-                                <p class="text-lg text-white">CLIENTS</p>
+                                    <br>
+                                <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -341,7 +342,8 @@
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
 
                                 <span class="counter  text-white block text-3xl leading-5">14650+</span>
-                                <p class="text-lg text-white">Projects</p>
+                                <br>
+                                <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -354,7 +356,8 @@
                                     6
                                     +
                                 </span>
-                                <p class="text-lg text-white">CONTINENTS</p>
+                                <br>
+                                <span class="text-lg text-white">CONTINENTS</span>
                             </div>
                         </div>
                         <div
@@ -367,7 +370,8 @@
                                     650
 
                                     +</span>
-                                <p class="text-lg text-white">EXHIBITIONS</p>
+                                    <br>
+                                <span class="text-lg text-white">EXHIBITIONS</span>
                             </div>
                         </div>
                     </div>
@@ -379,11 +383,11 @@
 
         <section class="mb-10" id="portfolio">
             <div class="px-[5%] text-center m-5 p-5">
-                <h3 class="md:text-4xl text-2xl font-bold mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
+                <h3 class="md:text-4xl text-2xl mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
-                <div class="grid md:grid-cols-3 gap-2">
+                <div class="grid md:grid-cols-3 gap-2 md:mx-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
                         <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
@@ -429,7 +433,7 @@
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-5 mt-5">
+                        <div class="text-center md:p-10 py-3 ">
 
                             <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
                                 At Stand Constructions, we design to carry your brand to world standards by using years
@@ -656,8 +660,8 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class=" text-gray-600 text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
@@ -779,10 +783,10 @@
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                 <div>
-                    <p class="text-sm">
+                    <span class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                         who carry your brand to world standards with years of knowledge and experience.
-                    </p>
+                    </span>
                 </div>
             </div>
             <div class="col-span-2">
@@ -828,7 +832,7 @@
                                 <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">info@standconstructions.com</p>
+                                <span class="font-semibold">info@standconstructions.com</span>
                                 <span class="text-sm">Mail us</span>
                             </div>
                         </div>
@@ -837,7 +841,7 @@
                                 <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">standconstructions.com</p>
+                                <span class="font-semibold">standconstructions.com</span>
                                 <span class="text-sm">Website</span>
                             </div>
                         </div>
@@ -846,7 +850,7 @@
                                 <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                                <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                                 <span class="text-sm">Located at</span>
                             </div>
                         </div>
