--- a/stand-design-and-booth-construction-company/hannover/index.html
+++ b/stand-design-and-booth-construction-company/hannover/index.html
@@ -166,8 +166,8 @@
                         <h1 class="text-2xl md:text-6xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES HANNOVER
                         </h1>
-                        <p class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Hannover
-                        </p>
+                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Hannover
+                        </span>
                     </div>
                     <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
                         <a href="#"
@@ -261,9 +261,9 @@
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5">
+                    <div class="text-center md:p-10 md:mt-20">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-20 pb-10">STAND CONSTRUCTIONS ARE A FULL-SERVICE EXHIBITION STAND DESIGN COMPANY IN HANNOVER
+                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 pb-10">STAND CONSTRUCTIONS ARE A FULL-SERVICE EXHIBITION STAND DESIGN COMPANY IN HANNOVER
                         </h2>
                     </div>
                     <div class="grid md:grid-cols-2 gap-6  md:pl-10">
@@ -298,6 +298,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
         <section>
             <div class="counterrs">
 
@@ -314,7 +316,8 @@
                                 <span class="counter text-white block text-3xl leading-5">
                                     4650
                                     <sup>+</sup></span>
-                                <p class="text-lg text-white">CLIENTS</p>
+                                    <br>
+                                <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -323,7 +326,8 @@
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
 
                                 <span class="counter  text-white block text-3xl leading-5">14650+</span>
-                                <p class="text-lg text-white">Projects</p>
+                                <br>
+                                <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -336,7 +340,8 @@
                                     6
                                     +
                                 </span>
-                                <p class="text-lg text-white">CONTINENTS</p>
+                                <br>
+                                <span class="text-lg text-white">CONTINENTS</span>
                             </div>
                         </div>
                         <div
@@ -349,23 +354,27 @@
                                     650
 
                                     +</span>
-                                <p class="text-lg text-white">EXHIBITIONS</p>
+                                    <br>
+                                <span class="text-lg text-white">EXHIBITIONS</span>
                             </div>
                         </div>
                     </div>
 
                 </div>
+                
             </div>
+            <br>
+            <br>
         </section>
 
 
         <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5">
-                <h3 class="md:text-4xl text-2xl font-bold mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
+            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
+                <h3 class="md:text-4xl text-2xl mt-10">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
-                <div class="grid md:grid-cols-3 gap-2">
+                <div class="grid md:grid-cols-3 gap-2 md:mx-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
                         <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
@@ -410,18 +419,18 @@
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-5 mt-5">
+                        <div class="text-center md:p-10 bg-blue-100 ">
 
-                            <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
+                            <p class=" blurr_para  text-blue p-10 mb-3  rounded-xl">
                                 Stand Constructions’ factory has the latest equipment to carry out the construction work for the completed exhibition. Our goal is to offer excellent design to our customers. We start by discussing showcasing goals and requirements with the exhibitor. Our creative designers are passionate about creating exhibition stand designs, including custom, modular, country pavilions, and exhibit designs, while meeting our clients’ needs across business and industry types. Our professional graphic designers will create the design, and the <a href="https://www.standconstructions.com/exhibition-stand-builder/germany/" class="text-blue-500">exhibition stand builder in Germany </a>will offer the best that suits your exhibitor’s needs. As the highest-quality exhibition stand contractor company in Hannover, we provide the most cost-effective deal for you. For a more detailed view of your stand structure, our team has prepared a 3-D stand layout for your reference. We are an <b>exhibition stand design company in Hannover </b>that will finalize the layout when you approve. Stand Constructions caters to the whole provider proper, from exhibition stand design to set up to dismantling and entire on-floor management. We are a famous exhibition stand builders company in Hannover that guarantees a hassle-free displaying experience to our customers by taking all their work pressure associated with the exhibition stand designing, building, fabrication, manufacturing, and different processes.
                                 <br>
                                 <br>
 
                                 A team of skilled & well-certified expert exhibition stand builders in Hannover is at Stand Constructions that can flip your brand imaginative and prescient right into a reality. In addition to designing extraordinary stands that supplement your brand, we’re the pre-eminent <b> exhibition stand design company in Hannover </b>. 
                             </p>
-                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
+                            <h3 class="text-black md:text-3xl text-2xl">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
                             <p
-                                class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
+                                class="blurr_para md:p-10 p-5 mb-3 text-black rounded-2xl">
                                 As an <b>exhibition stand contractor company in Hannover </b>, we can assist you in growing your brand presence. By placing our great foot forward, we provide a pristine variety of Hannover exhibition stands and building offerings. Our exhibition stand communicates the brand’s message effectively. We make our turnkey displaying offerings in conjunction with short answers to any exhibition-associated issues confronted by our customers. Regardless of the dimensions or sort of business, we work with each brand and business. Our <b>exhibition stand builder in Hannover </b>builds great exhibition stands concentrated on your target market with specific and profitable <b>exhibition stand designs and builds in Hannover </b>. As a leading <b>exhibition stand design company in Hannover</b>, we work tirelessly to create a stand to surpass all others.
                             </p>
                         </div>
@@ -628,14 +637,14 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
+                        <div class="text-center pt-10">
                             <span class="text-black text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
                     </div>
 
-                    <div class=" relative w-full  p-3 bg-white  mt-20
+                    <div class=" relative w-full  p-3 bg-white  mt-10
             flex justify-center">
                         <span class="big-circle"></span>
                         
@@ -750,10 +759,10 @@
         <div class="col-span-3 flex flex-col gap-3">
             <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
             <div>
-                <p class="text-sm">
+                <span class="text-sm">
                     Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                     who carry your brand to world standards with years of knowledge and experience.
-                </p>
+                </span>
             </div>
         </div>
         <div class="col-span-2">
@@ -799,7 +808,7 @@
                             <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">info@standconstructions.com</p>
+                            <span class="font-semibold">info@standconstructions.com</span>
                             <span class="text-sm">Mail us</span>
                         </div>
                     </div>
@@ -808,7 +817,7 @@
                             <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">standconstructions.com</p>
+                            <span class="font-semibold">standconstructions.com</span>
                             <span class="text-sm">Website</span>
                         </div>
                     </div>
@@ -817,7 +826,7 @@
                             <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                            <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                             <span class="text-sm">Located at</span>
                         </div>
                     </div>
