--- a/exhibition-stand-builder/uk/index.html
+++ b/exhibition-stand-builder/uk/index.html
@@ -375,16 +375,16 @@
         <section>
             <div class="wrap-3 ">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5 m:10">
+                    <div class="text-center md:p-10 md:mt-20 m:10">
 
-                        <h2 class="md:text-4xl text-2xl text-gray md:mt-4 md:pb-20 mb:5">STAND CONSTRUCTION: A RELIABLE EXHIBITION STAND DESIGN COMPANY IN UK
+                        <h2 class="md:text-4xl text-2xl text-gray-600 md:mt-4 md:pb-10 mb:5">STAND CONSTRUCTION: A RELIABLE EXHIBITION STAND DESIGN COMPANY IN UK
                         </h2>
                     </div>
                     <div class="md:grid md:grid-cols-2 gap-6  md:pl-10">
 
 
                         <div class="content_para ">
-                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-slate-100">Formed in 2008, we’ve grown to be a respected “full-provider” <b> exhibition stand design company in UK
+                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3  text-gray-500  bg-slate-100">Formed in 2008, we’ve grown to be a respected “full-provider” <b> exhibition stand design company in UK
                                 </b>, servicing customers for showcases in London, Milton Keynes, the Birmingham NEC and different prestigious venues in the UK. Our provider specialises in designing, manufacturing, and setting up custom-constructed and
                                 modular exhibition stands covering the entire UK. As the most respectable <b>exhibition stand contractor company in UK
                                 </b>, we’re obsessed with handing over the exceptional viable provider and presenting the proper stand at the proper price. We have supplied modular exhibition stands and other exhibition stands for exhibitors in the UK.
@@ -408,12 +408,12 @@
 
 
         <section>
-            <div class="px-[5%] my-5">
+            <div class="px-[5%] my-5 bg-gray-100 ">
                 <div class="md:grid grid-cols-6 gap-4">
-                    <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
+                    <div class="col-start-2 col-span-4 ">
+                        <h2 class="md:text-3xl text-2xl  text-gray-600 font-medium  text-center md:mt-20    ">Some of Our Work That
                             Excelled at the Exhibitions</h2>
-                        <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
+                        <p class="text-center pt-5 pb-5  text-gray-500 ">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
                             style and characteristics. As an <b>exhibition stand contractor</b>, we helped
                             our clients achieve their marketing and advertising objectives through these attractive
@@ -464,14 +464,14 @@
                 <div class="px-[3%]">
 
                     <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10">GET THE BEST SHOWCASING EXPERIENCE FROM A TOP EXHIBITION STAND DESIGN COMPANY IN UK
+                        <h2 class="md:text-4xl text-2xl text-gray-600 mt-4 md:pb-5">GET THE BEST SHOWCASING EXPERIENCE FROM A TOP EXHIBITION STAND DESIGN COMPANY IN UK
                         </h2>
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
                         <div class="text-center md:p-10 mt-5">
 
-                            <p class=" border border-lightgray-400 rounded-3xl  md:p-10 mb-3 p-5 bg-slate-100 ">
+                            <p class=" border border-lightgray-400 rounded-3xl   text-gray-500  md:p-10 mb-3 p-5 bg-slate-100 ">
                                 We supply exceptional, excellent quality each time. In addition, we provide the widest variety of answers, from easy cloth backdrops for Shell Schemes to excessively great custom-constructed stands. Stand Constructions is an
                                 <a href="/">exhibition stand builder </a> in UK that provides reusable modular exhibition stands, pop-up stands and transportable displays. As a result, we’ve grown to become the most dependent <b>exhibition stand manufacturer
                                 company in UK </b>. Our many options ensure you may acquire the exceptional technique to match you, your stand and your budget. Whether in the UK or Europe, our pleasant and skilled team will maximise your presence and
@@ -506,8 +506,8 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class=" text-gray-600 text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
