--- a/stand-design-and-booth-construction-company/dusseldorf/index.html
+++ b/stand-design-and-booth-construction-company/dusseldorf/index.html
@@ -169,8 +169,8 @@
                         <h1 class="text-2xl md:text-6xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES DUSSELDORF
                         </h1>
-                        <p class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Dusseldorf
-                        </p>
+                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Dusseldorf
+                        </span>
                     </div>
                     <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
                         <a href="#"
@@ -264,9 +264,9 @@
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5">
+                    <div class="text-center md:p-10 md:mt-10">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-20 pb-10">WE ARE A FULL-SERVICE EXHIBITION
+                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-2 pb-10">WE ARE A FULL-SERVICE EXHIBITION
                             STAND DESIGN COMPANY IN DUSSELDORF
                         </h2>
                     </div>
@@ -275,7 +275,7 @@
 
                         <div class="content_para ">
                             <i class="fa fa-angle-right border text-4xl md:absolute  left-2/3 border-s-4"></i>
-                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-slate-100">Stand
+                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-gray-100">Stand
                                 Constructions is a reliable <b>exhibition stand design </b>company in Dusseldorf that
                                 strives to offer the best exhibition stands. We have been involved in the exhibition
                                 stand design and building in Dusseldorf for more than 15 years. As a professional
@@ -311,6 +311,8 @@
 
 
                 </div>
+                <br>
+                <br>
             </div>
         </section>
         <section>
@@ -329,7 +331,8 @@
                                 <span class="counter text-white block text-3xl leading-5">
                                     4650
                                     <sup>+</sup></span>
-                                <p class="text-lg text-white">CLIENTS</p>
+                                    <br>
+                                <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -338,7 +341,8 @@
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
 
                                 <span class="counter  text-white block text-3xl leading-5">14650+</span>
-                                <p class="text-lg text-white">Projects</p>
+                                <br>
+                                <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -351,7 +355,8 @@
                                     6
                                     +
                                 </span>
-                                <p class="text-lg text-white">CONTINENTS</p>
+                                <br>
+                                <span class="text-lg text-white">CONTINENTS</span>
                             </div>
                         </div>
                         <div
@@ -364,50 +369,53 @@
                                     650
 
                                     +</span>
-                                <p class="text-lg text-white">EXHIBITIONS</p>
+                                    <br>
+                                <span class="text-lg text-white">EXHIBITIONS</span>
                             </div>
                         </div>
                     </div>
 
                 </div>
             </div>
+            <br>
+            <br>
         </section>
 
 
         <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5">
+            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
                 <h3 class="md:text-4xl text-2xl font-bold mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
-                <div class="grid md:grid-cols-3 gap-2">
+                <div class="grid md:grid-cols-3 gap-2 md:mx-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-2.webp" alt="portfolio-img-2" loading="lazy"
+                        <img src="../../assets/images/portfolio/two.webp" alt="portfolio-img-2" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-3.webp" alt="portfolio-img-3" loading="lazy"
+                        <img src="../../assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-4.webp" alt="portfolio-img-4" loading="lazy"
+                        <img src="../../assets/images/portfolio/four.webp" alt="portfolio-img-4" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-5.webp" alt="portfolio-img-5" loading="lazy"
+                        <img src="../../assets/images/portfolio/five.webp" alt="portfolio-img-5" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-6.webp" alt="portfolio-img-6" loading="lazy"
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-6" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
@@ -420,15 +428,15 @@
             <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND
                             DESIGN COMPANY IN DUSSELDORF?
                         </h2>
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-5 mt-5">
+                        <div class="text-center md:p-10 bg-gray-100 ">
 
-                            <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
+                            <p class=" blurr_para  text-blue p-10 mb-3  rounded-xl">
                                 We are an <b> exhibition stand design company in Dusseldorf</b> with innovative 3D designs that
                                 enhance the company’s image. We offer superb exhibition stands and end-to-end offerings.
                                 Choose Stand Constructions as your dependent <b>exhibition stand contractor company </b>in
@@ -455,10 +463,10 @@
                                 The exhibition stands, and layout is made with excellent substances to make them
                                 resistant and elite.
                             </p>
-                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="text-black md:text-3xl text-2xl ">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
-                                class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
+                                class="blurr_para md:p-10 p-5 mb-3 text-black ">
                                 Our offerings as a most suitable <b>exhibition stand design company in Dusseldorf </b>include in-house manufacturing facilities, stand subject matter conceptualization, end-to-end services, online supervision, and dismantling and transport. Stand Constructions trusts in growing durable relations with clients by presenting them with the fine as their brand image. You can unquestioningly agree with us about the great of the stands, revolutionary designs, and after-exhibit service. Our complete and devoted workforce ensures quicker delivery, ease of bills and versatility of operations. We are a pioneer <b>exhibition stand builders company in Dusseldorf </b> with the goal of offering our customers terrific and technologically superior stands. Participating as an exhibitor is a cost-effective and worry-free choice, irrespective of whether you’re a first-timer or a skilled professional.
                             </p>
                         </div>
@@ -649,14 +657,14 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class="text-black text-xl">[ Connect with company ]</span>
 
                         </div>
 
                     </div>
 
-                    <div class=" relative w-full  p-3 bg-white  mt-20
+                    <div class=" relative w-full  p-3 bg-white  mt-10
             flex justify-center">
                         <span class="big-circle"></span>
                         
@@ -773,10 +781,10 @@
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                 <div>
-                    <p class="text-sm">
+                    <span class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                         who carry your brand to world standards with years of knowledge and experience.
-                    </p>
+                    </span>
                 </div>
             </div>
             <div class="col-span-2">
@@ -822,7 +830,7 @@
                                 <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">info@standconstructions.com</p>
+                                <span class="font-semibold">info@standconstructions.com</span>
                                 <span class="text-sm">Mail us</span>
                             </div>
                         </div>
@@ -831,7 +839,7 @@
                                 <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">standconstructions.com</p>
+                                <span class="font-semibold">standconstructions.com</span>
                                 <span class="text-sm">Website</span>
                             </div>
                         </div>
@@ -840,7 +848,7 @@
                                 <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                                <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                                 <span class="text-sm">Located at</span>
                             </div>
                         </div>
@@ -856,7 +864,7 @@
     </div>
     <!-- /Footer-->
      <!-- Modal Structure -->
-    <div id="customModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden" style="z-index: 1000;">
+    <div id="customModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center hidden justify-center " style="z-index: 1000;">
         <div class="relative bg-white rounded-lg overflow-hidden shadow-lg w-full max-w-5xl mx-auto flex justify-center items-center" style="max-height: 90vh;">
             <!-- Close Button -->
             <button onclick="closeCustomModal()" class="absolute top-4 right-4 text-white text-2xl z-10 bg-black rounded-full px-3 py-1">
