--- a/stand-design-and-booth-construction-company/frankfurt/index.html
+++ b/stand-design-and-booth-construction-company/frankfurt/index.html
@@ -165,8 +165,8 @@
                         <h1 class="text-2xl md:text-6xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES FRANKFURT
                         </h1>
-                        <p class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Frankfurt
-                        </p>
+                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Frankfurt
+                        </span>
                     </div>
                     <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
                         <a href="#"
@@ -260,9 +260,9 @@
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-5">
+                    <div class="text-center md:p-10 md:mt-10">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-20 pb-10">STAND CONSTRUCTIONS ARE A FULL-SERVICE EXHIBITION STAND DESIGN COMPANY IN FRANKFURT
+                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 pb-10">STAND CONSTRUCTIONS ARE A FULL-SERVICE EXHIBITION STAND DESIGN COMPANY IN FRANKFURT
                         </h2>
                     </div>
                     <div class="grid md:grid-cols-2 gap-6  md:pl-10">
@@ -294,8 +294,11 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
         <section>
             <div class="counterrs">
+                
 
 
                 <div class="px-[3%] py-3">
@@ -352,16 +355,18 @@
 
                 </div>
             </div>
+            <br>
+            <br>
         </section>
 
 
         <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5">
-                <h3 class="md:text-4xl text-2xl font-bold mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
+            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
+                <h3 class="md:text-4xl text-2xl font-bold mt-10">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
-                <div class="grid md:grid-cols-3 gap-2">
+                <div class="grid md:grid-cols-3 gap-2 md:mx-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
                         <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
@@ -401,12 +406,12 @@
             <div class="ourwork bg-white">
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4 pb-10">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN FRANKFURT? 
+                        <h2 class="md:text-4xl text-2xl text-black mt-4 ">WHY CHOOSE US AS YOUR EXHIBITION STAND DESIGN COMPANY IN FRANKFURT? 
                         </h2>
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-5 mt-5">
+                        <div class="text-center md:p-10  mt-5  bg-blue-100">
 
                             <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
                                 Stand Constructions offers multiple services and benefits as an <a href="" class="text-blue-500">exhibition stand contractor company in Germany </a>. The major reason exhibitors choose Stand Constructions over other companies is that we put their brand first. We thoroughly understand their needs first, and then develop stand designs that fulfil them. We work tirelessly until our clients achieve their exhibition goals, be it brand awareness or lead generation. Our passionate project managers maintain regular communication with you throughout the process, from the initial consultation until after the exhibition ends. We ensure that we offer <b>exhibition stand design and build in Frankfurt </b>that surpasses established standards. 
@@ -415,9 +420,9 @@
 
                                 Further, our wide range of services eliminates the hassle associated with exhibitions. Our exhibition stand builders company in Frankfurt does not only design and build the stand, but also looks after its shipping and logistics, assembly and dismantling, and storage and maintenance. We offer these services, whether you choose us for a custom, rental, modular, or country pavilion stand. Our exhibition stand design company in Frankfurt also offers furniture rentals, on-site support, and assistance with marketing strategies. By opting for Stand Constructions, you are choosing a partner that will support you before, during, and after the exhibition. Stand Constructions is the right partner if you want the maximum ROI for your next exhibition. 
                             </p>
-                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
+                            <h3 class="text-black md:text-3xl text-2xl my-5">HOW DO WE MAKE YOU STAND OUT AT AN EXHIBITION? </h3>
                             <p
-                                class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
+                                class="blurr_para md:p-10 p-5 mb-3 text-black rounded-2xl">
                                 Stand Constructions understands the role of a well-designed exhibition stand. That’s why we put extra focus on designing unique stands. We will make you stand out among the crowd of exhibitors with the most captivating stand. Our <b>exhibition stand design company in Frankfurt </b>designs stands that are technologically advanced and integrate elements that increase visitor engagement. We design smart exhibition stands that use space well and are easy to navigate. They have different sections for product demos, client interaction, and refreshments, allowing you to perform these activities in dedicated areas. Join hands with our <b>exhibition stand contractor company in Frankfurt </b>and make a lasting impression at your next exhibition. 
                             </p>
                         </div>
@@ -623,14 +628,14 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class=" text-gray-600 text-xl">[ Connect with COMPANY ]</span>
 
                         </div>
 
                     </div>
 
-                    <div class=" relative w-full  p-3 bg-white  mt-20
+                    <div class=" relative w-full  p-3 bg-white  mt-10
             flex justify-center">
                         <span class="big-circle"></span>
                         
@@ -746,10 +751,10 @@
         <div class="col-span-3 flex flex-col gap-3">
             <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
             <div>
-                <p class="text-sm">
+                <span class="text-sm">
                     Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                     who carry your brand to world standards with years of knowledge and experience.
-                </p>
+                </span>
             </div>
         </div>
         <div class="col-span-2">
@@ -795,7 +800,7 @@
                             <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">info@standconstructions.com</p>
+                            <span class="font-semibold">info@standconstructions.com</span>
                             <span class="text-sm">Mail us</span>
                         </div>
                     </div>
@@ -804,7 +809,7 @@
                             <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">standconstructions.com</p>
+                            <span class="font-semibold">standconstructions.com</span>
                             <span class="text-sm">Website</span>
                         </div>
                     </div>
@@ -813,7 +818,7 @@
                             <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                            <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                             <span class="text-sm">Located at</span>
                         </div>
                     </div>
