--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
                 <div class="flex justify-center items-center">
                     <div
                         class="rounded-lg shadow flex flex-col justify-center items-center gap-3 md:px-10  py-10 backdrop-blur bg-white/45 md:w-3/4">
-                        <p class="font-semibold text-black">WHAT WE DO</p>
+                        <span class="font-semibold text-black">WHAT WE DO</span>
                         <h2 class="text-2xl text-blue-950 font-bold p-5">What do we do as exhibition stand builders?
                         </h2>
                         <hr>
-                        <p class="text-black p-5"><a href="https://www.standconstructions.com/"
+                        <span class="text-black p-5"><a href="https://www.standconstructions.com/"
                                 class="text-[#0076F9] font-bold">Stand Constructions</a> embodies a client’s visual
                             concept in an eye-catching and inventive way, enhancing their marketing strategy on the show
                             floor.
@@ -394,7 +394,7 @@
                             shows, our stands enable you to effectively communicate your message with visual impact
                             while promoting your brand. To give you a fantastic experience, we also take care of media
                             coverage to promote your product and services
-                            in the best possible way.</p>
+                            in the best possible way.</span>
                         <div class="space-x-3 mt-5 hidden md:block">
                             <a href="https://www.standconstructions.com/#portfolio"
                                 class="relative inline-flex items-center justify-start py-3 pl-4 pr-12 overflow-hidden font-semibold text-[#0076F9] transition-all duration-150 ease-in-out rounded hover:pl-10 hover:pr-6 bg-gray-50 group">
